--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 NODE_ENV=development
 PORT=4000
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=postgres
