--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "yarn m:run && node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "m:run": "yarn typeorm migration:run -- -d ./src/config/typeorm.ts",
