--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=postgres
+REDIS_PORT=6379
+REDIS_HOST=localhost
